<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mbf_simple_client_py</name>
  <version>0.0.1</version>
  <description>Examples of minimal MBF action clients using rclpy.</description>

  <maintainer email="amock@uos.de">Alexander Mock</maintainer>

  <license>Apache License 2.0</license>

  <author email="amock@uos.de">Alexander Mock</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mbf_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
